# hrc_Sofar

./: README.md
human_baxter_collaboration/: CMakeLists.txt  package.xml
human_baxter_collaboration/launch/: human_baxter_both_hands.launch  human_baxter_one_hand.launch
human_baxter_collaboration/scripts/: tf_publisher.py
human_baxter_collaboration/src/: task_manager.cpp  task_manager_hand.cpp
human_baxter_servers/: CMakeLists.txt  package.xml
human_baxter_servers/launch/: servers.launch  servers_cartesian.launch
human_baxter_servers/src/: moveit_controller.cpp  moveit_controller_slow.cpp  tf_server.cpp
human_baxter_servers/srv/: PickPlace.srv  Position.srv
moveit_robots/baxter/baxter_moveit_config/config/: baxter.srdf  joint_limits.yaml
